# NOVOMATIC-2025

./: CMakeLists.txt  README.md
task1/: CMakeLists.txt  Data.h  engine.cpp  engine.h  main.cpp  saved_queries.txt
task2/: CMakeLists.txt  main.cpp
task2/core/: Program.cpp  Program.h  engine.h
task2/entities/: triangle.h
task2/entity/: exit_override.cpp  exit_override.h  machine_context.cpp  machine_context.h  machine_state.h  state_buy_ticket.cpp  state_buy_ticket.h  state_coin_insertion.cpp  state_coin_insertion.h  state_give_change.cpp  state_give_change.h  state_print_ticket.cpp  state_print_ticket.h  state_ticket_printed.cpp  state_ticket_printed.h
task2/helper/: clear.h  config.h  utils.h
task3/: CMakeLists.txt  Wrapper.h  binary_op.h  calculate.h  main.cpp
task3/core/: engine.cpp  engine.h
task3/entities/: triangle.cpp  triangle.h
task3/helper/: vec2.h
tests/: CMakeLists.txt
tests/task1/: CMakeLists.txt  test_compression.cpp  test_engine.cpp
tests/task2/: CMakeLists.txt  test_coin_insertion.cpp
tests/task3/: CMakeLists.txt  test_binaryop.cpp  test_calculate.cpp  test_collision.cpp  test_wrapper.cpp
